# php-axum-poc

./: .gitignore  README.md  docker-compose.yml  nginx.conf
php/: index.php
rust-server/: Cargo.toml  Dockerfile
rust-server/src/: main.rs
